# proto_ecs

./: Cargo.toml
ecs_macros/: Cargo.toml
ecs_macros/src/: lib.rs
proto_ecs/: Cargo.toml  LICENSE
proto_ecs/benches/: entity_sytem_benchmark.rs  shared_datagroups.rs
proto_ecs/ecs_macros/: Cargo.toml
proto_ecs/ecs_macros/src/: common.rs  datagroup_macros.rs  lib.rs  local_systems_macros.rs  tests.rs  utils.rs
proto_ecs/ecs_macros/src/core_macros/: ids.rs  ids_macros.rs  mod.rs
proto_ecs/ecs_macros/src/systems/: common.rs  global_systems_macros.rs  local_systems_macros.rs  mod.rs
proto_ecs/src/: app.rs  data_group.rs  data_group2.rs  data_groups2.rs  entities.rs  entity.rs  entity_spawn_desc.rs  entity_system.rs  lib.rs  local_systems.rs  prelude.rs  systems.rs
proto_ecs/src/core/: casting.rs  common.rs  events.rs  het_single_mem_block.rs  id_types.rs  ids.rs  keys.rs  layer.rs  locking.rs  mod.rs  time.rs  window.rs  window_manager.rs
proto_ecs/src/core/assets_management/: models.rs
proto_ecs/src/core/math/: mod.rs  transform.rs
proto_ecs/src/core/platform/: mod.rs  winit_window.rs
proto_ecs/src/core/platform/opengl/: mod.rs  opengl_buffer.rs  opengl_render_backend.rs  opengl_shader.rs  opengl_vertex_array.rs
proto_ecs/src/core/render/: buffer.rs  mod.rs  render.rs  render_api.rs  shader.rs  vertex_array.rs
proto_ecs/src/core/rendering/: buffer.rs  camera.rs  handle.rs  material.rs  mod.rs  render.rs  render_api.rs  render_thread.rs  shader.rs  vertex_array.rs
proto_ecs/src/core/utils/: handle.rs
proto_ecs/src/core/window/: events.rs  mod.rs  window.rs
proto_ecs/src/core/windowing/: events.rs  keys.rs  mod.rs  window.rs  window_manager.rs
proto_ecs/src/entities/: entity.rs  entity_allocator.rs  entity_spawn_desc.rs  entity_system.rs  test_entities.rs  test_entity_allocator.rs  transform_datagroup.rs
proto_ecs/src/systems/: common.rs  global_system.rs  global_systems.rs  local_systems.rs  mod.rs
proto_ecs/src/systems/engine/: rendering.rs
proto_ecs/src/tests/: mod.rs  shared_datagroups.rs  shared_global_systems.rs  shared_local_systems.rs  test_datagroups.rs  test_global_systems.rs  test_local_systems.rs
sandbox/: Cargo.toml
sandbox/resources/Triangle/: triangle.bbmodel
sandbox/src/: main.rs
src/: data_group.rs  entity.rs  lib.rs  systems.rs
src/core/: id_types.rs  mod.rs
