[package]
name = "proto_ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = { version = "*" }
ecs_macros = { version = "0.1.0", path = "ecs_macros" }
lazy_static = "1.4.0"
once_cell = "1.18.0"
