[package]
name = "proto_ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_float = "1.0.0"
bitvec = "1.0.1"
crc32fast = "1.4.2"
criterion = { version = "0.5.1", features = ["html_reports"] }
ctor = "0.2.8"
dashmap = { version = "5.5.3", features = ["rayon"] }
ecs_macros = { version = "0.1.0", path = "ecs_macros" }
lazy_static = "1.5.0"
nohash-hasher = "0.2.0"
once_cell = "1.19.0"
parking_lot = "0.12.3"
rayon = "1.10.0"
scc = "2.1.1"
sync-unsafe-cell = "0.1.1"
topological-sort = "0.2.2"
vector-map = "1.0.1"
macaw = "0.19.1"

[[bench]]
name = "entity_sytem_benchmark"
harness = false

[profile.bench]
debug = 2
