[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto_ecs = { version = "0.1.0", path = "../proto_ecs" }
glam = {version = "0.28.0", features = ["serde"]}
imgui = "0.12.0"
macaw = "0.19.1"
ctor = "0.2.8"
