[package]
name = "ecs_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.3.2"
lazy_static = "1.4.0"
once_cell = "1.18.0"
proc-macro2 = "1.0.67"
quote = "1.0.33"
syn = {version = "2.0.37", features = ['full']}

[lib]
proc-macro = true
