[package]
name = "ecs_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.4.2"
darling = "0.20.9"
lazy_static = "1.5.0"
once_cell = "1.19.0"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.67", features = ['full'] }

[lib]
proc-macro = true
